# CHICKRACE

./: Design_Book.md  README.md
script/: build.bat
src/: CMakeLists.txt  main.cpp
src/CR/: Cards_CR.h  cards_CR.cpp  cards_CR.h  gameBoard_CR.h  ui_manager_CR.cpp  ui_manager_CR.h
src/common/: config.cpp  config.h  util.cpp
src/game/: Cards_CR.h  cards.cpp  cards.h  cards_CR.cpp  cards_CR.h  composes.cpp  composes.h  gameBoard_CR.cpp  gameBoard_CR.h  game_board.cpp  game_board.h  info.cpp  info.h  player.cpp  player.h  player_CR.h  stat.cpp  stat.h
src/network/: client.cpp  msg.h  server.cpp  session.cpp
src/ui/: UNO.code-workspace  inputter.cpp  inputter.h  outputter.cpp  outputter.h  ui_CHICKRACE_design.cpp  ui_manager.cpp  ui_manager.h  view.cpp  view.h  view_formatter.cpp  view_formatter.h  view_formatter_CHICKRACE.cpp
